# rust_actix_mongodb

./: Cargo.toml  README.md  dockerfile
src/: main.rs
src/api/: user_api.rs
src/models/: user_model.rs
src/repo/: mongodb_repo.rs
