[package]
name = "rust_api_mongodb"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.dev]
# opt-level = 3
# debug = false
# split-debuginfo = 'off'
# debug-assertions = false
# overflow-checks = false
# lto = true
# panic = 'unwind'
# incremental = false
# codegen-units = 1
# rpath = false

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
serde = "1.0.147"
dotenv = "0.15.0"
futures = "0.3.25"

[dependencies.mongodb]
version = "2.3.0"
default-features = false
features = ["async-std-runtime"]
